# autoclass-lite

./: .gitignore  README.md  pyproject.toml
autoclass_lite/: __init__.py
autoclass_lite/automl/: factory.py  observers.py  orchestrator.py
autoclass_lite/cv/: splitter.py  validator.py
autoclass_lite/metrics/: classification.py
autoclass_lite/models/: base.py  knn.py  logistic.py  naive_bayes.py  tree.py
examples/: demo.ipynb
tests/: test_automl.py  test_cv.py  test_factory.py  test_metrics.py  test_models.py
