[project]
name = "autoclass-lite"
version = "0.1.2"
description = "A lightweight AutoML library for classification, built from scratch."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning", "automl", "classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
